--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,11 @@
     ],
     "rules": {
         "react/react-in-jsx-scope": "off",
-        "indent": ["error", 2]
+        "indent": ["error", 2],
+        "no-unused-expressions": "off",
+        "jest/valid-expect": "off",
+        "react/prop-types": "off",
+        "no-unused-vars": "off",
+        "quotes": "off"
     }
 }
